# gpto

./: .gitignore  README.md  about.html  index.html  input_window.html  package.json  settings.html  vite.config.js
public/: index.html  input_window.html  settings.html
src/: AboutApp.jsx  CustomTitleBar.jsx  InputApp.jsx  SettingsApp.jsx  about.jsx  input.jsx  settings.jsx  styles.css  titleBar.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: main.rs
