[package]
name = "gpto"
version = "0.0.0"
description = "GPTo ask your friend"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["devtools", "process-relaunch", "shell-open", "system-tray", "window-hide", "window-maximize", "window-minimize", "window-start-dragging"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
rdev = "0.5.2"
reqwest = { version = "0.11.16", features = ["json"] }
unicode_categories = "0.1"
enigo = "0.1.2"
once_cell = "1.9.0"
aes-gcm = "0.10.1"
aes = "0.7"
aead = "0.5.2"
rand = "0.8"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
